--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 		}
 	],
 	"require": {
-		"php": ">=7.4.0",
+		"php": "^7.4 || ^8.0",
 		"baraja-core/xml-to-php-array": "^1.0",
 		"baraja-core/selectbox-tree": "^1.0 || ^2.0",
 		"spatie/array-to-xml": "^2.16",
@@ -21,9 +21,9 @@
 	},
 	"require-dev": {
 		"baraja-core/markdown-latte-filter": "^2.0",
-		"phpstan/phpstan": "^0.12.18",
-		"tracy/tracy": "^2.7",
-		"phpstan/phpstan-nette": "^0.12.6",
+		"phpstan/phpstan": "^0.12.74",
+		"tracy/tracy": "^2.8",
+		"phpstan/phpstan-nette": "^0.12.14",
 		"spaze/phpstan-disallowed-calls": "^1.1",
 		"roave/security-advisories": "dev-master"
 	},
